--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,22 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+ 	<dependency>
+    	<groupId>guinai</groupId>
+    	<artifactId>guinai</artifactId>
+    	<version>0.0.6</version>    	
+	</dependency> 
+	<dependency>
+  		<groupId>org.apache.logging.log4j</groupId>
+  		<artifactId>log4j-core</artifactId>
+  		<version>2.8.2</version>
+  	</dependency>
+    <!--设置es的版本-->
+    <dependency>
+        <groupId>org.elasticsearch.client</groupId>
+        <artifactId>elasticsearch-rest-high-level-client</artifactId>
+        <version>7.0.0</version>
+    </dependency>
+    </dependencies>
 </project>
