--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
     </plugins>
   </build>
   <dependencies>
- 	<dependency>
-    	<groupId>guinai</groupId>
-    	<artifactId>guinai</artifactId>
-    	<version>0.0.6</version>    	
-	</dependency> 
+  	<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
+        </dependency>
 	<dependency>
   		<groupId>org.apache.logging.log4j</groupId>
   		<artifactId>log4j-core</artifactId>
