--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
     </plugins>
   </build>
   <dependencies>
+   	<dependency>
+    	<groupId>guinai</groupId>
+    	<artifactId>guinai</artifactId>
+    	<version>0.0.6</version>    	
+	</dependency> 
   	<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
