--- a/src/application.conf
+++ b/src/application.conf
@@ -1,7 +1,8 @@
 elasticsearch{
 	#clusterHttpURI="192.168.12.165:9200"
 	clusterHttpURI="192.168.12.161:9200"
-	alias_suffix="_alias"	
+	alias_suffix="_alias"
+	pagesize=10000
 	session{
 		index.number_of_shards=10
 		index.number_of_replicas=1
