--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,40 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.1</version>
+        <executions>
+           <execution>
+              <phase>package</phase>
+              <goals>
+                 <goal>shade</goal>
+              </goals>
+              <configuration>
+                 <createDependencyReducedPom>false</createDependencyReducedPom>
+                 <filters>
+                    <filter>
+                       <artifact>*:*</artifact>
+                       <excludes>
+                          <exclude>META-INF/*.SF</exclude>
+                          <exclude>META-INF/*.DSA</exclude>
+                          <exclude>META-INF/*.RSA</exclude>
+                       </excludes>
+                    </filter>
+                 </filters>
+                 <transformers>                                
+                     <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                         <mainClass>EsDataProcess.EsTest</mainClass>
+                     </transformer>
+                     <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                         <resource>application.conf</resource>
+                     </transformer>
+                 </transformers>
+              </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -37,6 +71,16 @@
         <groupId>org.elasticsearch.client</groupId>
         <artifactId>elasticsearch-rest-high-level-client</artifactId>
         <version>7.0.0</version>
+    </dependency>
+     <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.11.8</version>
+    </dependency>
+    <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-reflect</artifactId>
+        <version>2.11.8</version>
     </dependency>
     </dependencies>
 </project>
