--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,17 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <defaultGoal>compile</defaultGoal>
+    <resources>
+        <resource>
+            <directory>src</directory>
+            <includes>
+                <include>*.properties</include>
+                <include>*.xml</include>
+                <include>*.conf</include>
+            </includes>
+        </resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -41,7 +52,7 @@
                          <mainClass>EsDataProcess.EsTest</mainClass>
                      </transformer>
                      <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                         <resource>application.conf</resource>
+                         <resource>MppConfig.conf</resource>
                      </transformer>
                  </transformers>
               </configuration>
@@ -51,21 +62,16 @@
     </plugins>
   </build>
   <dependencies>
-   	<dependency>
-    	<groupId>guinai</groupId>
-    	<artifactId>guinai</artifactId>
-    	<version>0.0.6</version>    	
-	</dependency> 
   	<dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.6</version>
-        </dependency>
-	<dependency>
-  		<groupId>org.apache.logging.log4j</groupId>
-  		<artifactId>log4j-core</artifactId>
-  		<version>2.8.2</version>
-  	</dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>6.0.6</version>
+    </dependency>
+  	<dependency>
+     <groupId>org.json4s</groupId>
+     <artifactId>json4s-jackson_2.11</artifactId>
+     <version>3.2.11</version>
+	</dependency>
     <!--设置es的版本-->
     <dependency>
         <groupId>org.elasticsearch.client</groupId>
@@ -81,6 +87,11 @@
         <groupId>org.scala-lang</groupId>
         <artifactId>scala-reflect</artifactId>
         <version>2.11.8</version>
+    </dependency>
+        <dependency>
+        <groupId>com.typesafe</groupId>
+        <artifactId>config</artifactId>
+        <version>1.2.1</version>
     </dependency>
     </dependencies>
 </project>
